# app/Http/Controllers/Api/SolicitudDeAdopcionController.php
@@ -33,6 +33,40 @@ class SolicitudDeAdopcionController extends Controller
     }
 
     /**
+     * @OA\Get(
+     *     path="/api/solicitudes/paginadas",
+     *     summary="Obtener solicitudes de adopción paginadas",
+     *     tags={"Solicitudes de Adopción"},
+     *     @OA\Parameter(
+     *         name="page",
+     *         in="query",
+     *         description="Número de página",
+     *         required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Parameter(
+     *         name="per_page",
+     *         in="query",
+     *         description="Cantidad de elementos por página",
+     *         required=false,
+     *         @OA\Schema(type="integer")
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Lista paginada de solicitudes de adopción"
+     *     )
+     * )
+     */
+    public function paginated(Request $request)
+    {
+        $perPage = $request->input('per_page', 10); // Por defecto 10
+        $solicitudes = SolicitudDeAdopcion::paginate($perPage);
+
+        return response()->json($solicitudes, 200);
+    }
+
+
+    /**
      * @OA\Post(
      *     path="/api/solicitudes",
      *     tags={"Solicitudes de Adopción"},
