# routes/api.php
@@ -10,6 +10,10 @@ use App\Http\Middleware\VerificarToken;
 Route::post('login', action: [LoginController::class, 'login']);
 
 Route::middleware(['auth:sanctum'])->group(function () {
+    Route::get('/mascotas/paginadas', [MascotaController::class, 'paginated']);
+    Route::get('/usuarios/paginados', [UsuarioController::class, 'paginated']);
+    Route::get('/solicitudes/paginadas', [SolicitudDeAdopcionController::class, 'paginated']);
+
     Route::apiResource('mascotas', MascotaController::class);
     Route::apiResource('usuarios', UsuarioController::class);
     Route::apiResource('solicitudes', SolicitudDeAdopcionController::class);
